# custom-watermark

./: README.md
src/: CMakeLists.txt  custom-watermark.cpp
